--- a/views/index.erb
+++ b/views/index.erb
@@ -49,11 +49,10 @@
             </div>
           </div>
           <div id="grid-wrapper"></div>
-          <!--
+          
           <div class="text-center">
-            <button class="btn new-game bngame">Neues Spiel2</button>
+            <button class="btn new-game bngame">Neues Spiel</button>
           </div>
-          -->
         </div>
 
         <div class="column third flow-opposite no-pad-side right-overwrite">
@@ -204,19 +203,7 @@
   <div class="container">
     <div class="row clearfix">
       <div class="column full">
-        <!--
-        <img class="image floated" src="img/img-index.png" alt="Sudoku">
-        <p>Um der Rangliste hinzufügen zu können, müssen Sie sich anmelden. Nach der Anmeldung werden Sie für jede Sudoku-Lösung Punkte bekommen. Je mehr Punkte Sie bekommen, desto höher werden Sie an der Rangliste sein. Melden Sie sich für das Spiel an, wählen Sie die gewünschte Schwierigkeitsstufe und laden Sie Ihre Freunde ein, mit denen Sie wetteifern können!</p>
-
-        <h1>Spielregeln</h1>
-
-        <p>Um ein Sudoku zu lösen, müssen Sie die leeren Zellen des Spielfeldes mit Ziffern von 1 bis 9 so füllen, dass jede Ziffer in jeder Zeile, Spalte und in jedem 3х3-Block genau einmal vorkommt. Um Sudoku zu spielen, brauchen Sie keine speziellen mathematischen oder rechnerischen Fertigkeiten zu haben.</p>
-
-        <p>Um zu beginnen, wählen Sie die Schwierigkeitsstufe: sehr leicht, leicht, mittelschwer, schwer und sehr schwer. Je höher die Schwierigkeitsstufe ist, desto weniger Zellen werden am Anfang des Spiels mit den Ziffern (von 1 bis 9) gefüllt. Keine Sorge, man kann ein Profi werden, auch wenn man mit einer leichten Stufe beginnt. Je nach der Schwierigkeitsstufe und Übung brauchen Sie von 5 bis 30 Minuten, um ein Sudoku zu lösen. Wir empfehlen Ihnen, sich mit den grundlegenden Lösungstechniken des Sudoku vertraut zu machen.</p>
-
-        <p>Neue Ziffern einzugeben und die früher eingegebenen Ziffern zu korrigieren darf man nur in leeren Sudoku-Feldern, die von Anfang an nicht gefüllt waren. Um eine Ziffer zu löschen, wählen Sie die Zelle und drücken Sie die Taste „Löschen“ oder geben Sie ersatzweise eine neue Ziffer ein. Rote Ziffern bedeuten, dass die Spielfelder regelwidrig gefüllt sind. Prüfen Sie das Ganze aufmerksam durch, finden Sie die Fehler und korrigieren Sie sie.</p>
-        -->
-        <h1>Spielregeln</h1>
+        <h2>Spielregeln</h2>
         <p>Um ein <a href="https://sudoku-spielen.org/">Sudoku zu lösen</a>, müssen Sie die leeren Zellen des Spielfeldes mit Ziffern von 1 bis 9 so ausfüllen, dass jede Ziffer in jeder Zeile, Spalte und in jedem 3х3-Block genau einmal vorkommt. Um Sudoku zu spielen, brauchen Sie keine speziellen mathematischen oder rechnerischen Fertigkeiten zu haben.</p>
         <img class="image floated" src="img/index/image13.jpg" alt="Spielregeln">
         <p>Um zu beginnen, wählen Sie den Schwierigkeitsgrad: sehr leicht, leicht, mittelschwer, schwer und sehr schwer. Je höher der Schwierigkeitsgrad ist, desto weniger Zellen werden am Anfang des Spiels mit den Ziffern (von 1 bis 9) gefüllt. Keine Sorge, man kann ein Profi werden, auch wenn man mit einem leichten Grad beginnt. Je nach dem Schwierigkeitsgrad und Übung brauchen Sie von 5 bis 30 Minuten, um ein Sudoku zu lösen. Wir empfehlen Ihnen, sich mit den grundlegenden <a href="/sudoku-lösung">Lösungstechniken</a> des Sudoku vertraut zu machen.</p>
